[project]
name = "deep-agents"
version = "0.1.0"
description = "Multi-agent cyber threat intelligence system"
requires-python = ">=3.11"
dependencies = [
    "tavily-python>=0.3.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.30.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "reports", "database"]
